tests/snapshots/snapshots__budget_log_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (487 words)

CHANGELOG.md
     1→# Change Log …
README.md
     1→log …
    19→## Minimum supported `rustc` …
    25→## Usage …
    27→### In libraries
    29→Libraries should link only to the `log` crate, and use the provided macros to
    30→log whatever information will be useful to downstream consumers:
    31→
    32→```toml
    33→[dependencies]
    34→log = "0.4"
    35→```
    36→
    37→```rust
    38→use log::{info, trace, warn};
    39→
      →…
    58→### In executables …
   106→## Structured logging …
rfcs/0296-structured-logging.md
     5→# Summary …
    16→# Contents …
    43→# Motivation …
    98→# Guide-level explanation …
   495→# Reference-level explanation …
   502→### Don't break anything …
  1575→# Drawbacks, rationale, and alternatives …
  1598→#### Build a serialization contract in `log` …
  1629→# Prior art …
  1650→# Unresolved questions …
src/__private_api.rs
     9→#[cfg(not(feature = "kv"))]
    10→pub type Value<'a> = &'a str;
    12→mod sealed {
    14→    pub trait KVs<'a> {
    39→pub struct GlobalLogger;
   112→#[cfg(feature = "kv")]
   113→mod kv_support {
   114→    use crate::kv;
   115→
   116→    pub type Value<'a> = kv::Value<'a>;
src/kv/error.rs
     5→pub struct Error {
     9→#[derive(Debug)]
    10→enum Inner {
    11→    #[cfg(feature = "std")]
    12→    Boxed(std_support::BoxedError),
    13→    Msg(&'static str),
    14→    #[cfg(feature = "value-bag")]
    15→    Value(crate::kv::value::inner::Error),
    16→    Fmt,
    17→}
    73→    pub(super) type BoxedError = Box<dyn error::Error + Send + Sync>;
src/kv/key.rs
     7→pub trait ToKey {
    37→pub struct Key<'k> {
src/kv/mod.rs
   247→mod key;
   259→#[cfg(feature = "kv_unstable")]
   260→pub mod source;
   261→#[cfg(feature = "kv_unstable")]
   262→pub mod value;
src/kv/source.rs
    51→pub trait Source {
   235→pub trait VisitSource<'kvs> {
src/kv/value.rs
    11→pub trait ToValue {
   119→pub struct Value<'v> {
   288→macro_rules! impl_to_value_primitive {
   312→macro_rules! impl_to_value_nonzero_primitive {
   336→macro_rules! impl_value_to_primitive {
   462→pub trait VisitValue<'v> {
   738→    pub enum Inner<'v> {
  1129→macro_rules! as_debug {
  1139→macro_rules! as_display {
  1149→macro_rules! as_error {
  1159→macro_rules! as_serde {
  1169→macro_rules! as_sval {
src/lib.rs
   405→#[macro_use]
   406→mod macros;
   407→mod serde;
   409→#[cfg(feature = "kv")]
   410→pub mod kv;
   421→struct AtomicUsize {
   422→    v: Cell<usize>,
   423→}
   475→pub enum Level {
   516→    type Err = ParseLevelError;
   636→pub enum LevelFilter {
   666→    type Err = ParseLevelError;
   781→enum MaybeStaticStr<'a> {
   782→    Static(&'static str),
   783→    Borrowed(&'a str),
   784→}
   787→    #[inline]
   788→    fn get(&self) -> &'a str {
   789→        match *self {
      →…
   842→pub struct Record<'a> {
   858→struct KeyValues<'a>(&'a dyn kv::Source);
  1003→pub struct RecordBuilder<'a> {
  1158→pub struct Metadata<'a> {
  1200→pub struct MetadataBuilder<'a> {
  1249→pub trait Log: Sync + Send {
  1283→struct NopLogger;
  1482→#[cfg(target_has_atomic = "ptr")]
  1483→fn set_logger_inner<F>(make_logger: F) -> Result<(), SetLoggerError>
  1484→where
  1485→    F: FnOnce() -> &'static dyn Log,
  1486→{
  1487→    match STATE.compare_exchange(
      →…
  1549→pub struct SetLoggerError(());
  1566→pub struct ParseLevelError(());
  1599→#[doc(hidden)]
  1600→pub mod __private_api;
  1602→/// The statically resolved maximum log level.
  1603→///
  1604→/// See the crate level documentation for information on how to configure this.
  1605→///
      →…
  1611→pub const STATIC_MAX_LEVEL: LevelFilter = match cfg!(debug_assertions) {
src/macros.rs
src/serde.rs
test_max_level_features/main.rs
     6→#[cfg(not(feature = "std"))]
     7→fn set_boxed_logger(logger: Box<dyn Log>) -> Result<(), log::SetLoggerError> {
     8→    log::set_logger(Box::leak(logger))
     9→}
    11→struct State {
    12→    last_log: Mutex<Option<Level>>,
    13→}
    15→struct Logger(Arc<State>);
    17→impl Log for Logger {
    18→    fn enabled(&self, _: &Metadata) -> bool {
    19→        true
    20→    }
    22→    fn log(&self, record: &Record) {
    23→        *self.0.last_log.lock().unwrap() = Some(record.level());
    24→    }
    26→    fn flush(&self) {}
    29→fn main() {
    44→fn test(a: &State, filter: LevelFilter) {
    72→fn last(state: &State, expected: Option<Level>) {
