tests/snapshots/snapshots__budget_log_kv_subdir1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 8 → level 0 (5 words)

error.rs
key.rs
mod.rs
source.rs
value.rs
