tests/snapshots/snapshots__budget_log_kv_subdir2.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1500 → level 2 (1020 words)

error.rs
     5→pub struct Error
    10→enum Inner
    19→impl Error
    21→    pub fn msg
    29→    pub(super) fn from_value
    37→    pub(super) fn into_value
    48→impl fmt::Display for Error
    49→    fn fmt
    62→impl From<fmt::Error> for Error
    63→    fn from
    69→mod std_support
    73→    pub(super) type BoxedError
    75→    impl Error
    77→        pub fn boxed
    87→    impl error::Error for Error
    89→    impl From<io::Error> for Error
    90→        fn from
key.rs
     7→pub trait ToKey
     9→    fn to_key
    12→impl<T> ToKey for &T
    16→    fn to_key
    21→impl<'k> ToKey for Key<'k>
    22→    fn to_key
    27→impl ToKey for str
    28→    fn to_key
    37→pub struct Key
    42→impl<'k> Key<'k>
    45→    pub fn from_str
    53→    pub fn as_str
    61→    pub fn to_borrowed_str
    69→impl<'k> fmt::Display for Key<'k>
    70→    fn fmt
    75→impl<'k> AsRef<str> for Key<'k>
    76→    fn as_ref
    81→impl<'k> Borrow<str> for Key<'k>
    82→    fn borrow
    87→impl<'k> From<&'k str> for Key<'k>
    88→    fn from
    94→mod std_support
    99→    impl ToKey for String
   100→        fn to_key
   105→    impl<'a> ToKey for Cow<'a, str>
   106→        fn to_key
   113→mod sval_support
   119→    impl<'a> Value for Key<'a>
   120→        fn stream
   128→    impl<'a> ValueRef<'a> for Key<'a>
   129→        fn stream_ref
   136→mod serde_support
   141→    impl<'a> Serialize for Key<'a>
   142→        fn serialize
mod.rs
   246→mod error
   247→mod key
   250→mod source
   252→mod value
   260→pub mod source
   262→pub mod value
source.rs
    51→pub trait Source
    62→    fn visit
    73→    fn get
    85→    fn count
    91→fn get_default
   114→fn count_default
   130→impl<T> Source for &T
   134→    fn visit
   138→    fn get
   142→    fn count
   147→impl<K, V> Source for (K, V)
   152→    fn visit
   156→    fn get
   164→    fn count
   169→impl<S> Source for [S]
   173→    fn visit
   181→    fn get
   191→    fn count
   196→impl<const N: usize, S> Source for [S; N]
   200→    fn visit
   204→    fn get
   208→    fn count
   213→impl<S> Source for Option<S>
   217→    fn visit
   225→    fn get
   229→    fn count
   235→pub trait VisitSource
   237→    fn visit_pair
   241→impl<'a, 'kvs, T> VisitSource<'kvs> for &'a mut T
   245→    fn visit_pair
   250→impl<'a, 'b: 'a, 'kvs> VisitSource<'kvs> for fmt::DebugMap<'a, 'b>
   251→    fn visit_pair
   257→impl<'a, 'b: 'a, 'kvs> VisitSource<'kvs> for fmt::DebugList<'a, 'b>
   258→    fn visit_pair
   264→impl<'a, 'b: 'a, 'kvs> VisitSource<'kvs> for fmt::DebugSet<'a, 'b>
   265→    fn visit_pair
   271→impl<'a, 'b: 'a, 'kvs> VisitSource<'kvs> for fmt::DebugTuple<'a, 'b>
   272→    fn visit_pair
   280→mod std_support
   288→    impl<S> Source for Box<S>
   292→        fn visit
   296→        fn get
   300→        fn count
   305→    impl<S> Source for Arc<S>
   309→        fn visit
   313→        fn get
   317→        fn count
   322→    impl<S> Source for Rc<S>
   326→        fn visit
   330→        fn get
   334→        fn count
   339→    impl<S> Source for Vec<S>
   343→        fn visit
   347→        fn get
   351→        fn count
   356→    impl<'kvs, V> VisitSource<'kvs> for Box<V>
   360→        fn visit_pair
   365→    impl<K, V, S> Source for HashMap<K, V, S>
   371→        fn visit
   378→        fn get
   382→        fn count
   387→    impl<K, V> Source for BTreeMap<K, V>
   392→        fn visit
   399→        fn get
   403→        fn count
value.rs
    11→pub trait ToValue
    13→    fn to_value
    16→impl<T> ToValue for &T
    20→    fn to_value
    25→impl<'v> ToValue for Value<'v>
    26→    fn to_value
   119→pub struct Value
   123→impl<'v> Value<'v>
   125→    pub fn from_any
   133→    pub fn from_debug
   143→    pub fn from_display
   154→    pub fn from_serde
   165→    pub fn from_sval
   175→    pub fn from_dyn_debug
   182→    pub fn from_dyn_display
   190→    pub fn from_dyn_error
   197→    pub fn null
   204→    fn from_inner
   217→    pub fn visit
   222→impl<'v> fmt::Debug for Value<'v>
   223→    fn fmt
   228→impl<'v> fmt::Display for Value<'v>
   229→    fn fmt
   235→impl<'v> serde_core::Serialize for Value<'v>
   236→    fn serialize
   245→impl<'v> sval::Value for Value<'v>
   246→    fn stream
   252→impl<'v> sval_ref::ValueRef<'v> for Value<'v>
   253→    fn stream_ref
   258→impl ToValue for str
   259→    fn to_value
   264→impl<'v> From<&'v str> for Value<'v>
   265→    fn from
   270→impl ToValue for ()
   271→    fn to_value
   276→impl<T> ToValue for Option<T>
   280→    fn to_value
   288→macro_rules! impl_to_value_primitive
   312→macro_rules! impl_to_value_nonzero_primitive
   336→macro_rules! impl_value_to_primitive
   376→impl<'v> Value<'v>
   379→    pub fn to_borrowed_error
   384→    pub fn to_borrowed_str
   390→mod std_support
   397→    impl<T> ToValue for Box<T>
   401→        fn to_value
   406→    impl<T> ToValue for Arc<T>
   410→        fn to_value
   415→    impl<T> ToValue for Rc<T>
   419→        fn to_value
   424→    impl ToValue for String
   425→        fn to_value
   430→    impl<'v> ToValue for Cow<'v, str>
   431→        fn to_value
   436→    impl<'v> Value<'v>
   438→        pub fn to_cow_str
   443→    impl<'v> From<&'v String> for Value<'v>
   444→        fn from
   462→pub trait VisitValue
   469→    fn visit_any
   472→    fn visit_null
   477→    fn visit_u64
   482→    fn visit_i64
   487→    fn visit_u128
   492→    fn visit_i128
   497→    fn visit_f64
   502→    fn visit_bool
   507→    fn visit_str
   512→    fn visit_borrowed_str
   517→    fn visit_char
   524→    fn visit_error
   530→    fn visit_borrowed_error
   539→impl<'a, 'v, T: ?Sized> VisitValue<'v> for &'a mut T
   543→    fn visit_any
   547→    fn visit_null
   551→    fn visit_u64
   555→    fn visit_i64
   559→    fn visit_u128
   563→    fn visit_i128
   567→    fn visit_f64
   571→    fn visit_bool
   575→    fn visit_str
   579→    fn visit_borrowed_str
   583→    fn visit_char
   588→    fn visit_error
   593→    fn visit_borrowed_error
   602→pub(in crate::kv) mod inner
   619→    pub fn visit
   721→pub(in crate::kv) mod inner
   738→    pub enum Inner
   752→    impl<'v> From<()> for Inner<'v>
   753→        fn from
   758→    impl<'v> From<bool> for Inner<'v>
   759→        fn from
   764→    impl<'v> From<char> for Inner<'v>
   765→        fn from
   770→    impl<'v> From<f32> for Inner<'v>
   771→        fn from
   776→    impl<'v> From<f64> for Inner<'v>
   777→        fn from
   782→    impl<'v> From<i8> for Inner<'v>
   783→        fn from
   788→    impl<'v> From<i16> for Inner<'v>
   789→        fn from
   794→    impl<'v> From<i32> for Inner<'v>
   795→        fn from
   800→    impl<'v> From<i64> for Inner<'v>
   801→        fn from
   806→    impl<'v> From<isize> for Inner<'v>
   807→        fn from
   812→    impl<'v> From<u8> for Inner<'v>
   813→        fn from
   818→    impl<'v> From<u16> for Inner<'v>
   819→        fn from
   824→    impl<'v> From<u32> for Inner<'v>
   825→        fn from
   830→    impl<'v> From<u64> for Inner<'v>
   831→        fn from
   836→    impl<'v> From<usize> for Inner<'v>
   837→        fn from
   842→    impl<'v> From<i128> for Inner<'v>
   843→        fn from
   848→    impl<'v> From<u128> for Inner<'v>
   849→        fn from
   854→    impl<'v> From<&'v str> for Inner<'v>
   855→        fn from
   860→    impl<'v> fmt::Debug for Inner<'v>
   861→        fn fmt
   878→    impl<'v> fmt::Display for Inner<'v>
   879→        fn fmt
   896→    impl<'v> Inner<'v>
   897→        pub fn from_debug
   901→        pub fn from_display
   905→        pub fn from_dyn_debug
   909→        pub fn from_dyn_display
   913→        pub fn empty
   917→        pub fn to_bool
   924→        pub fn to_char
   931→        pub fn to_f64
   954→        pub fn to_i64
   964→        pub fn to_u64
   974→        pub fn to_u128
   984→        pub fn to_i128
   994→        pub fn to_borrowed_str
  1031→    pub fn visit
  1051→impl<'v> Value<'v>
  1055→    pub fn capture_debug
  1065→    pub fn capture_display
  1075→    pub fn capture_error
  1085→    pub fn capture_serde
  1095→    pub fn capture_sval
  1107→    pub fn is
  1116→    pub fn downcast_ref
  1129→macro_rules! as_debug
  1139→macro_rules! as_display
  1149→macro_rules! as_error
  1159→macro_rules! as_serde
  1169→macro_rules! as_sval
