tests/snapshots/snapshots__budget_log_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 3 → level 0 (9 words)

__private_api.rs
kv/error.rs
kv/key.rs
kv/mod.rs
kv/source.rs
kv/value.rs
lib.rs
macros.rs
serde.rs
