tests/snapshots/snapshots__budget_log_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 15 → level 0 (13 words)

CHANGELOG.md
README.md
rfcs/0296-structured-logging.md
src/__private_api.rs
src/kv/error.rs
src/kv/key.rs
src/kv/mod.rs
src/kv/source.rs
src/kv/value.rs
src/lib.rs
src/macros.rs
src/serde.rs
test_max_level_features/main.rs
