tests/snapshots/snapshots__budget_log_root_level1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 → level 1 (1157 words)

CHANGELOG.md
     1→# Change Log
     3→## [Unreleased]
     5→## [0.4.29] - 2025-12-02
     7→## What's Changed
    11→## New Contributors
    17→## [0.4.28] - 2025-09-02
    19→## What's Changed
    24→## New Contributors
    32→### Notable Changes
    35→## [0.4.27] - 2025-03-24
    37→### What's Changed
    47→## [0.4.26] - 2025-02-18
    49→### What's Changed
    56→## [0.4.25] - 2025-01-14
    58→### What's Changed
    64→## [0.4.24] - 2025-01-11
    66→### What's Changed
    72→## [0.4.23] - 2025-01-10 (yanked)
    74→### What's Changed
    85→### New Contributors
    96→## [0.4.22] - 2024-06-27
    98→### What's Changed
   109→### New Contributors
   116→## [0.4.21] - 2024-02-27
   118→### What's Changed
   138→### New Contributors
   146→## [0.4.20] - 2023-07-11
   151→## [0.4.19] - 2023-06-10
   156→## [0.4.18] - 2023-05-28
   175→## [0.4.17] - 2022-04-29
   179→## [0.4.16] - 2022-03-22
   183→## [0.4.15] - 2022-02-23
   198→## [0.4.14] - 2021-01-27
   205→## [0.4.13] - 2021-01-11
   209→## [0.4.12] - 2020-12-24
   211→### New
   220→### Fixed
   224→## [0.4.11] - 2020-07-09
   226→### New
   231→### Fixed
   239→## [0.4.10] - 2019-12-16 (yanked)
   241→### Fixed
   245→## [0.4.9] - 2019-12-12 (yanked)
   247→### Minimum Supported Rust Version
   253→### New
   257→### Improved
   262→## [0.4.8] - 2019-07-28
   264→### New
   268→## [0.4.7] - 2019-07-06
   270→### New
   277→### Improved
   282→## [0.4.6] - 2018-10-27
   284→### Improved
   288→## [0.4.5] - 2018-09-03
   290→### Improved
   295→## [0.4.4] - 2018-08-17
   297→### Improved
   301→## [0.4.3] - 2018-06-29
   303→### Improved
   307→## [0.4.2] - 2018-06-05
   309→### Improved
   313→### Fixed
   317→## [0.4.1] - 2017-12-30
   319→### Fixed
   323→## [0.4.0] - 2017-12-24
   329→### Compatibility
   345→### New
   359→### Removed
   366→### Changed
   382→### In the Future
   388→## Older
README.md
     1→log
    19→## Minimum supported `rustc`
    25→## Usage
    27→### In libraries
    58→### In executables
   106→## Structured logging
rfcs/0296-structured-logging.md
     5→# Summary
    16→# Contents
    43→# Motivation
    46→## What is structured logging?
    86→## Why do we need structured logging in `log`?
    98→# Guide-level explanation
   103→## Logging structured key-value pairs
   107→### What can be captured as a structured value?
   175→#### Implementing `ToValue` for a simple value
   209→#### Implementing `ToValue` for a complex value
   255→## Supporting key-value pairs in `Log` implementations
   316→### Writing key-value pairs as text
   348→### Writing key-value pairs as JSON
   401→## Integrating log frameworks with `log`
   489→## How producers and consumers of structured values interact
   495→# Reference-level explanation
   500→## Design considerations
   502→### Don't break anything
   506→### Don't create a public dependency
   510→### Support arbitrary producers and arbitrary consumers
   514→### Remain object safe
   518→### Enable the next round of `log` development
   522→## Cargo features
   533→### `kv_sval` and `kv_serde`
   541→## A complete key-values API
   545→### `Error`
   625→### `Value`
   735→#### Erasing values in `Value::from_any`
   780→#### Ownership
   784→#### Thread-safety
   788→### `ToValue`
   800→#### Object safety
   804→#### Implementors
   981→### `Key`
  1077→#### Ownership
  1081→#### Thread-safety
  1085→#### Extensibility: Adding an index to keys
  1089→### `ToKey`
  1099→#### Object safety
  1103→#### Implementors
  1130→### `Source`
  1200→#### Adapters
  1214→#### Object safety
  1264→#### Implementors
  1369→#### Extensibility: Sending `Source`s between threads
  1403→### `Visitor`
  1422→#### Implementors
  1426→#### Object safety
  1430→### `Record` and `RecordBuilder`
  1460→## A minimal key-values API
  1569→## The `log!` macros
  1575→# Drawbacks, rationale, and alternatives
  1578→## Supporting structured logging at all
  1582→## Internalizing `sval` and `serde`
  1588→### Drawbacks
  1596→### Alternatives
  1598→#### Build a serialization contract in `log`
  1623→#### Just pick an existing framework
  1629→# Prior art
  1634→## Rust
  1640→## Go
  1644→## .NET
  1650→# Unresolved questions
src/__private_api.rs
    10→pub type Value
    12→mod sealed
    14→    pub trait KVs
    15→        fn into_kvs
    21→impl<'a> KVs<'a> for &'a [(&'a str, Value<'a>)]
    23→    fn into_kvs
    28→impl<'a> KVs<'a> for ()
    30→    fn into_kvs
    39→pub struct GlobalLogger
    41→impl Log for GlobalLogger
    42→    fn enabled
    46→    fn log
    50→    fn flush
    56→fn log_impl
    84→pub fn log
   103→pub fn enabled
   108→pub fn loc
   113→mod kv_support
   116→    pub type Value
   122→    pub fn capture_to_value
   126→    pub fn capture_debug
   130→    pub fn capture_display
   135→    pub fn capture_error
   140→    pub fn capture_sval
   145→    pub fn capture_serde
src/kv/error.rs
src/kv/key.rs
src/kv/mod.rs
src/kv/source.rs
src/kv/value.rs
src/lib.rs
   406→mod macros
   407→mod serde
   410→pub mod kv
   421→struct AtomicUsize
   426→impl AtomicUsize
   427→    const fn new
   431→    fn load
   435→    fn store
   443→unsafe impl Sync for AtomicUsize
   447→static mut LOGGER
   449→static STATE
   454→const UNINITIALIZED
   455→const INITIALIZING
   456→const INITIALIZED
   458→static MAX_LOG_LEVEL_FILTER
   460→static LOG_LEVEL_NAMES
   462→static SET_LOGGER_ERROR
   464→static LEVEL_PARSE_ERROR
   475→pub enum Level
   501→impl PartialEq<LevelFilter> for Level
   503→    fn eq
   508→impl PartialOrd<LevelFilter> for Level
   510→    fn partial_cmp
   515→impl FromStr for Level
   516→    type Err
   517→    fn from_str
   528→impl fmt::Display for Level
   529→    fn fmt
   534→impl Level
   535→    fn from_usize
   548→    pub fn max
   554→    pub fn to_level_filter
   561→    pub fn as_str
   579→    pub fn iter
   599→    pub fn increment_severity
   620→    pub fn decrement_severity
   636→pub enum LevelFilter
   651→impl PartialEq<Level> for LevelFilter
   653→    fn eq
   658→impl PartialOrd<Level> for LevelFilter
   660→    fn partial_cmp
   665→impl FromStr for LevelFilter
   666→    type Err
   667→    fn from_str
   678→impl fmt::Display for LevelFilter
   679→    fn fmt
   684→impl LevelFilter
   685→    fn from_usize
   699→    pub fn max
   707→    pub fn to_level
   714→    pub fn as_str
   732→    pub fn iter
   752→    pub fn increment_severity
   774→    pub fn decrement_severity
   781→enum MaybeStaticStr
   786→impl<'a> MaybeStaticStr<'a>
   788→    fn get
   842→pub struct Record
   858→struct KeyValues
   861→impl<'a> fmt::Debug for KeyValues<'a>
   862→    fn fmt
   869→impl<'a> Record<'a>
   872→    pub fn builder
   878→    pub fn args
   884→    pub fn metadata
   890→    pub fn level
   896→    pub fn target
   902→    pub fn module_path
   908→    pub fn module_path_static
   917→    pub fn file
   923→    pub fn file_static
   932→    pub fn line
   939→    pub fn key_values
   946→    pub fn to_builder
  1003→pub struct RecordBuilder
  1007→impl<'a> RecordBuilder<'a>
  1021→    pub fn new
  1037→    pub fn args
  1044→    pub fn metadata
  1051→    pub fn level
  1058→    pub fn target
  1065→    pub fn module_path
  1072→    pub fn module_path_static
  1079→    pub fn file
  1086→    pub fn file_static
  1093→    pub fn line
  1101→    pub fn key_values
  1108→    pub fn build
  1113→impl Default for RecordBuilder<'_>
  1114→    fn default
  1158→pub struct Metadata
  1163→impl<'a> Metadata<'a>
  1166→    pub fn builder
  1172→    pub fn level
  1178→    pub fn target
  1200→pub struct MetadataBuilder
  1204→impl<'a> MetadataBuilder<'a>
  1212→    pub fn new
  1223→    pub fn level
  1230→    pub fn target
  1237→    pub fn build
  1242→impl Default for MetadataBuilder<'_>
  1243→    fn default
  1249→pub trait Log
  1262→    fn enabled
  1271→    fn log
  1279→    fn flush
  1283→struct NopLogger
  1285→impl Log for NopLogger
  1286→    fn enabled
  1290→    fn log
  1291→    fn flush
  1294→impl<T> Log for &'_ T
  1298→    fn enabled
  1302→    fn log
  1305→    fn flush
  1311→impl<T> Log for std::boxed::Box<T>
  1315→    fn enabled
  1319→    fn log
  1322→    fn flush
  1328→impl<T> Log for std::sync::Arc<T>
  1332→    fn enabled
  1336→    fn log
  1339→    fn flush
  1351→pub fn set_max_level
  1375→pub unsafe fn set_max_level_racy
  1396→pub fn max_level
  1420→pub fn set_boxed_logger
  1478→pub fn set_logger
  1483→fn set_logger_inner
  1529→pub unsafe fn set_logger_racy
  1549→pub struct SetLoggerError
  1551→impl fmt::Display for SetLoggerError
  1552→    fn fmt
  1559→impl error::Error for SetLoggerError
  1566→pub struct ParseLevelError
  1568→impl fmt::Display for ParseLevelError
  1569→    fn fmt
  1576→impl error::Error for ParseLevelError
  1581→pub fn logger
  1600→pub mod __private_api
  1611→pub const STATIC_MAX_LEVEL
src/macros.rs
    75→macro_rules! log
   119→macro_rules! __log
   165→macro_rules! error
   204→macro_rules! warn
   252→macro_rules! info
   292→macro_rules! debug
   336→macro_rules! trace
   391→macro_rules! log_enabled
   415→macro_rules! __log_enabled
   429→macro_rules! __log_logger
   445→macro_rules! __log_key
   459→macro_rules! __log_key
   468→macro_rules! __log_value
   517→macro_rules! __log_value
   526→macro_rules! __log_value_sval
   535→macro_rules! __log_value_sval
   544→macro_rules! __log_value_serde
   553→macro_rules! __log_value_serde
   564→macro_rules! __log_value_error
   573→macro_rules! __log_value_error
src/serde.rs
    16→impl Serialize for Level
    17→    fn serialize
    31→impl<'de> Deserialize<'de> for Level
    32→    fn deserialize
   110→impl Serialize for LevelFilter
   111→    fn serialize
   126→impl<'de> Deserialize<'de> for LevelFilter
   127→    fn deserialize
test_max_level_features/main.rs
     7→fn set_boxed_logger
    11→struct State
    15→struct Logger
    17→impl Log for Logger
    18→    fn enabled
    22→    fn log
    26→    fn flush
    29→fn main
    44→fn test
    72→fn last
